# prueba-backend-django-strawberry

./: manage.py  pyproject.toml
historiasapp/: asgi.py  settings.py  urls.py  wsgi.py
historiasapp/auth/: auth_guard.py  context.py  hash.py  strategy.py
historiasapp/graphql/: middlewares.py  schema.py
historiasapp/users/: apps.py  inputs.py  models.py  resolvers.py  types.py
historiasapp/users/migrations/: 0001_initial.py  0002_alter_user_id.py
