[tool.poetry]
name = "prueba-backend-django"
version = "0.0.1"
description = ""
authors = ["Álvaro González <45352512+gonz0wsky@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
psycopg2-binary = "^2.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
